# IIS-preverjanje-vaj

./: .gitignore  README.md  data.dvc  pyproject.toml
models/: model.pkl
reports/: drift_report.html  stability_report.html
src/data/: drift_report.py  process_data.py  stability_tests.py
src/models/: train_eval.py
