[tool.poetry]
name = "iis-preverjanje-vaj"
version = "0.1.0"
description = ""
authors = ["KricejJanezMartin <jkricej@gmail.com>"]
readme = "README.md"
packages = [{include = "iis_preverjanje_vaj"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
scikit-learn = "^1.2.2"
evidently = "^0.3.1"
dvc = "^2.56.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
